# k-solutions-test

./: README.md  pyproject.toml
main/: __init__.py  config.py  exceptions.py  forms.py  models.py  piastrix.py  routes.py
main/static/: main.css
main/templates/: base.html  home.html  invoice.html  pay.html
