[tool.poetry]
name = "k-solutions-test"
version = "0.1.0"
description = ""
authors = ["yshzz <yshzz2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-wtf = "^0.14.2"
flask-sqlalchemy = "^2.4"
validators = "^0.14.1"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
